# NovelVerse

./: .gitignore  CLAUDE.md
.claude/: settings.json
.github/workflows/: backend.yml  frontend.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.toml  write_test_vip_helper.py
backend/app/: main.py
backend/app/api/v1/: admin.py  auth.py  chapters.py  chat.py  comments.py  crawl.py  economy.py  notifications.py  novels.py  router.py  story_intelligence.py  tts.py  users.py  vip.py
backend/app/core/: config.py  constants.py  database.py  deps.py  exceptions.py  qdrant.py  rate_limit.py  redis.py  sanitize.py  security.py
backend/app/models/: admin.py  ai.py  chapter.py  chat.py  comment.py  crawl.py  economy.py  nomination.py  notification.py  novel.py  social.py  story_intelligence.py  tts.py  user.py  vip.py
backend/app/services/: admin_service.py  chapter_service.py  character_service.py  chat_service.py  comment_service.py  crawl_service.py  economy_service.py  embedding_service.py  nomination_service.py  notification_service.py  novel_service.py  social_service.py  story_intelligence_service.py  translation_service.py  tts_service.py  user_service.py  vip_service.py
backend/app/workers/: crawl_worker.py
backend/app/workers/parsers/: base.py  biquge.py
backend/tests/: test_admin.py  test_ai_infrastructure.py  test_auth.py  test_chapters.py  test_chat.py  test_comments.py  test_crawl.py  test_economy.py  test_nominations.py  test_notifications.py  test_novels.py  test_rate_limit.py  test_social.py  test_story_intelligence.py  test_tts.py  test_vip.py
docs/: DEVELOPMENT_PLAN.md  In-App Economy Specification.md  PRD.md
frontend/: package-lock.json  package.json  proxy.ts
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/e2e/: phase2.spec.ts  smoke.spec.ts
frontend/lib/: api.ts
supabase/: config.toml
supabase/migrations/: 20260222000001_users.sql  20260222000002_novels_tags.sql  20260222000003_chapters_reading.sql  20260222000004_comments_reviews.sql  20260222000005_crawl.sql  20260222000006_vip.sql  20260222000007_reports_feedbacks.sql  (+8 more)
(+70 files in other folders)
